Added the picture page

--- a/main_app/templates/homepage.html
+++ b/main_app/templates/homepage.html
@@ -2,9 +2,16 @@
 {%load staticfiles%}
 
 {%block content%}
-  <ul class="radius">
+<box>
+  <ul class="text-overflow">
     <li class="body-text">This is a website.</li>
     <li class="body-text">Does it look good?</li>
-    <li class="body-text">I don't think so</li>
+    <li class="body-text">I don't think so.</li>
   </ul>
+</box>
+<box>
+  <p>Click the icon for pictures:
+  <a href="{% url 'viewpictures' %}"><span class="glyphicon glyphicon-picture"></span></a>
+  </p>
+</box>
 {%endblock%}
