--- a/main_app/static/overall_style.css
+++ b/main_app/static/overall_style.css
@@ -11,7 +11,7 @@
 }
 
 #background {
-  background-color: #504432;
+  background-color: #2B2B2B;
 }
 .radius {
   padding: 0.1em 0.1em 0.1em 0.1em ;
@@ -21,6 +21,30 @@
 
 #icon {
   color: #85C1E9;
-  font-size:4em;
+  font-size:3em;
   align-self:  center;
+}
+
+.picture-header {
+  font-family:'Roboto Slab',monospace;
+  font-size:2.5em;
+  font-weight: bolder;
+  color: #BA4A00;
+}
+
+.picture-text {
+  font-family:'Roboto Slab',monospace;
+  font-size:1.5em;
+  color: #D4AC0D;
+}
+
+.picture-body {
+  position:relative;
+  width: 180px;
+  max-height: 100%;
+}
+
+box {
+  margin-top: 0.5em;
+  margin-bottom: 1em;
 }
