--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="https://use.fontawesome.com/07f7c2e81d.js"></script>
+  <!--<link rel="stylesheet" href="overall_style.css">-->
   <link rel="stylesheet" href="{% static 'overall_style.css' %}">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -10,11 +10,13 @@
 <body id="background">
 <div class="container-fluid">
   <div class="row">
-    <div class="col-xs-2 col-sm-3">
-      <h1 class="radius" id="main-header">A USEFUL website!</h1>
+    <div class="col-md-2">
+      <span class="glyphicon glyphicon-text-size"></span>
+      <span class="glyphicon glyphicon-bold"></span>
+      <span class="glyphicon glyphicon-eur"></span>      
     </div>
-    <div class="col-xs-1">
-      <i class="fa fa-shower radius" id="icon"aria-hidden="true"></i>
+    <div class="col-md-6">
+      <h1 class="radius" id="main-header">A USEFUL website!</h1>
     </div>
   </div>
 {%block content%}
