--- a/main_app/templates/picturepage(og).html
+++ b/main_app/templates/picturepage(og).html
@@ -1,7 +1,8 @@
 {%extends 'base.html'%}
+{%load staticfiles%}
 {%block content%}
 <div class="container-fluid">
-  <div class="row is_flex">
+  <div class="row">
 {%for picture in pictures%}
     <div class="col-md-3 col-xs-10">
       <div class="col-xs-12 well">
