Finished login/signin
Login link and functions working.

--- a/main_app/static/css/main.css
+++ b/main_app/static/css/main.css
@@ -1,52 +1,35 @@
 body div{
-  font-family:'Dosis',monospace;
+  font-family:'Ubuntu';
 }
 #main-header {
-  font-size:4em;
-  font-weight: bold;
-  font-style: bold;
+  font-size:4em;  
+  font-family:'Bungee',cursive;
   color: #BA4A00;
   text-decoration:none;
 }
 
 
 a:hover {
-  text-decoration:none !important;
+  text-decoration:none;
 }
 
 #main-header:hover {
   color: #ba7500;
 }
 .body-text{
-  font-family: 'Lato';
-  font-size:1em;
+  font-family: 'Ubuntu';
+  font-size:1.2em;
+  line-height: 1.6em;
 }
 .title-text {
   font-size:2em;
-  font-weight: bolder;
-  font-style: oblique;
-}
-
-.panel {
-  background-color: #EC9D26 ;
+  font-weight: bolder;  
 }
 
 tbody tr td input, tbody tr td textarea{
-  margin: 1em 0em 0em 1em !important;
-}
-/*
-.test-text {
-  font-family:'Roboto Slab',monospace;
-  font-size:5em;
-  color: #FF5733;
+  margin: 1em 0em 0em 1em;
 }
 
-.test-word{
-  font-family:'fantasy';
-  font-size:2.5em;
-  color:#5DADE2;
-}
-*/
 /*pictures*/
 .picture-header {
   font-size:2.5em;
@@ -54,18 +37,24 @@ tbody tr td input, tbody tr td textarea{
   color: #BA4A00;
 }
 
-
 .picture-body {
   position:relative;
   width: 25em;
   max-height: 100%;
+  margin-bottom: 5%;
+}
+
+.subtext {
+  font-size:1em;
+  color: #C3C3C3;
+
 }
 .container-fluid .row{
-  align-items: flex-end !important;
+  align-items: flex-end;
 }
 
 .row.is_flex{
   display:flex;
-  align-items: flex-end !important;
+  align-items: flex-end;
 }
 /*navbar*/
