--- a/main_app/templates/picturepage.html
+++ b/main_app/templates/picturepage.html
@@ -1,13 +1,15 @@
 {%extends 'base.html'%}
+{%load staticfiles%}
 {%block content%}
-<div class="container-fluid">
-  <div class="row is_flex">
+<div class="container-fluid" style="margin: 5%">
+  <div class="row">
 {%for picture in pictures%}
     <div class="col-md-3 col-xs-10">
       <div class="col-xs-12 well">
-      <p class="lead"> {{picture.name}} </p>
+      <p class="title-text"> {{picture.name}} </p>
       <img class="picture-body img-responsive" src="{{picture.img_url}}">
       <p class="body-text">{{picture.description}}</p>
+      <p class="subtext">{{picture.user}}</p>
     </div>
     </div>
   {%if forloop.counter|divisibleby:4 and not forloop.last%}
