--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -2,16 +2,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!--<link rel="stylesheet" href="main.css">-->
-  <link rel="stylesheet" href="{% static 'css\main.css' %}">
+  <!--<link rel="stylesheet" href="main.css">-->  
   <link rel="stylesheet" href="{% static 'css\bootstrap.css' %}">
+  <link rel="stylesheet" href="{% static 'css\main.css' %}">
   <script src="{% static 'js\bootstrap.js' %}"></script>
-  <link href="https://fonts.googleapis.com/css?family=Dosis|Lato" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Bungee|Ubuntu" rel="stylesheet">
 
 <body>
 <div class="container">
 <div class="row">
-  <div class="col-xs-9 col-xs-offset-1 visible-xs" >
+  <div class="text-center visible-xs" >
       <a href="{%url 'home' %}"><h1 id="main-header" style="font-size: 3em">A USEFUL Website!!</h1></a>
   </div>
   <div class="col-xs-1 col-xs-offset-1 visible-xs" style="font-size: 1.5em">
@@ -26,13 +26,13 @@
       <a href="{% url 'viewpictures' %}">Photos</a>
     </li>
     <li class="lead">
-      <a href="#">Sign in</a>
+      <a href="{%url 'login' %}">Login</a>
     </li>
   </ul>
 </div>
 
   <div class="row">
-    <div class="col-md-11 col-md-offset-1 hidden-xs">
+    <div class="text-center hidden-xs">
         <a href="{%url 'home' %}"><h1 id="main-header" style="padding-bottom:5%">A USEFUL Website!!</h1></a>
     </div>
   </div>
