--- a/main_app/templates/picturepage(editted).html
+++ b/main_app/templates/picturepage(editted).html
@@ -1,8 +1,7 @@
 {%extends 'base.html'%}
-{%load staticfiles%}
 {%block content%}
 <div class="container-fluid">
-  <div class="row">
+  <div class="row is_flex">
 {%for picture in pictures%}
     <div class="col-md-3 col-xs-10">
       <div class="col-xs-12 well">
