--- a/main_app/templates/homepage.html
+++ b/main_app/templates/homepage.html
@@ -14,7 +14,7 @@
     Upload an Image
   </div>
   <div class="panel-body body-text">
-    <form action="upload_image/" method="post">
+    <form enctype="multipart/form-data" action="upload_image/" method="post">
       {%csrf_token%}
     <table>
       {{form.as_table}}
